--- a/Test-Copy1.ipynb
+++ b/Test-Copy1.ipynb
@@ -118,11 +118,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_none = ts_api.get_hist_OHLCV('000001.SH','D','I','None','20100701','20180801')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pro = ts.pro_api('dcecb4c7e06d394705fe904ab4b642f1fe0910241c79679c3f30d763')\n",
+    "\n",
+    "ts.pro_bar(pro_api=pro, ts_code='000001.SH', asset='E', start_date='20180101', end_date='20181011')"
    ]
   },
   {
